[tool.poetry]
name = "django-omise"
version = "0.2.16"
description = "Django models for Omise"
authors = ["James Tansiri <tansirijames@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_omise"}]
repository = "https://github.com/jamesx00/django-omise"

[tool.poetry.dependencies]
python = "^3.7"
omise = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
twine = "4.0.1"
Django = "^3.2.11"
pytest-django = "4.5.2"
psycopg2 = "^2.9.3"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"
poethepoet = "^0.16.2"
black = "^23.3.0"

[tool.poe.tasks]
test = 'pytest --verbose'
test_coverage = 'poetry run coverage run run_tests.py'
report_coveralls = 'poetry run coveralls'
test_coverage_html = 'poetry run pytest --cov-report html --cov=.'
test_coverage_term = 'poetry run pytest --cov-report term --cov=.'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
