[project]
name = "django-omise"
version = "0.3.0"
description = "Django models for Omise"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "James Tansiri", email = "tansirijames@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "omise>=0.13.0,<0.14.0",
    "setuptools>=70.0.0,<71.0.0",
]

[project.urls]
Repository = "https://github.com/jamesx00/django-omise"

[dependency-groups]
dev = [
    "pytest>=7.1.3,<8.0.0",
    "twine==4.0.1",
    "Django>=3.2.11,<4.0.0",
    "pytest-django==4.5.2",
    "psycopg2>=2.9.3,<3.0.0",
    "pytest-cov>=3.0.0,<4.0.0",
    "coveralls>=3.3.1,<4.0.0",
    "poethepoet>=0.16.2,<0.17.0",
    "black>=23.3.0,<24.0.0",
]

[tool.poe.tasks]
test = 'pytest --verbose'
test_coverage = 'coverage run run_tests.py'
report_coveralls = 'coveralls'
test_coverage_html = 'pytest --cov-report html --cov=.'
test_coverage_term = 'pytest --cov-report term --cov=.'

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["django_omise*"]

[tool.setuptools]
include-package-data = true
